# taskcicd

./: .gitignore  README.md
repos_copy/poprj/: .gitignore  README.rst  Taskfile.yml  pyproject.toml
repos_copy/poprj/tests/: test_poprj.py
repos_copy/windeps/: Taskfile.yml
