[tool.poetry]
name = "poprj"
version = "0.1.0"
description = ""
authors = ["Yair Dar <zvulon@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
opencv-python = "^4.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
